# ChangeLog for sci-mathematics/maxima
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/maxima/ChangeLog,v 1.64 2009/04/19 22:03:35 grozin Exp $

  20 Apr 2009; Andrey Grozin <grozin@gentoo.org> ChangeLog:
  Version bump

  01 Apr 2009; Ulrich Mueller <ulm@gentoo.org> maxima-5.17.1-r1.ebuild:
  Restore ~sparc after imaxima keywording, bug 262975.

  26 Mar 2009; Andrey Grozin <grozin@gentoo.org> maxima-5.17.1-r1.ebuild:
  ~sparc added back

*maxima-5.17.1-r1 (19 Mar 2009)

  19 Mar 2009; Andrey Grozin <grozin@gentoo.org> files/50maxima-gentoo.el,
  -maxima-5.13.0-r1.ebuild, -maxima-5.15.0-r1.ebuild, -maxima-5.16.3.ebuild,
  -maxima-5.17.1.ebuild, +maxima-5.17.1-r1.ebuild:
  maxima no longer installs imaxima - there is a separate package (bug
  #260663, thanks to Ulrich Mueller). rmaxima is produced when no lisp USE
  flags are given (bug #261455). Old versions cleaned.

*maxima-5.17.1 (20 Dec 2008)

  20 Dec 2008; Andrey Grozin <grozin@gentoo.org> +maxima-5.17.1.ebuild:
  Version bump

  29 Nov 2008; Andrey Grozin <grozin@gentoo.org> maxima-5.16.3.ebuild:
  Path to texmf-site now hard-coded

  03 Sep 2008; Alexis Ballier <aballier@gentoo.org> maxima-5.15.0-r1.ebuild,
  maxima-5.16.3.ebuild:
  Fix deps for mh, preparing for texlive 2008: as it now has its own ebuild,
  we won't be shipping it with texlive-mathextra anymore but use the ebuild
  instead.

*maxima-5.16.3 (26 Aug 2008)

  26 Aug 2008; Andrey Grozin <grozin@gentoo.org> -maxima-5.16.2.ebuild,
  +maxima-5.16.3.ebuild:
  Version bump

*maxima-5.16.2 (19 Aug 2008)

  19 Aug 2008; Andrey Grozin <grozin@gentoo.org> -maxima-5.15.0.ebuild,
  +maxima-5.16.2.ebuild:
  Version bump

  06 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  26 May 2008; Sébastien Fabbro <bicatali@gentoo.org>
  maxima-5.15.0-r1.ebuild:
  Fixed link for documentation (bug #223491)
