@@ -3,7 +3,7 @@ AUX maxima-no-init-files.patch 2626 RMD160 ffc34cc7e1d6ade44b100252233e83aa7e383
 AUX maxima-xdg-utils.patch 1090 RMD160 964f5d858b7521b5a3794705999a7fcbddd937e2 SHA1 576ff7b80737a60f71d3e5df0c2cf84161c63627 SHA256 99c600c4c7e813305da375a4afa4a5e7ea6aa4ec9f1ecc051b9c913281af53ea
 DIST maxima-5.17.1.tar.gz 20080768 RMD160 0738ddd1f8247ae0300b5810fa21db1fbfc608c3 SHA1 0f87f2fbf3c91cd54528cfc355ddf5ed30ee66ac SHA256 52c7b26c49488b7e774a2ef20684810e1d1609f48e341850054b8669ea3c96ab
 DIST maxima-5.18.1.tar.gz 20440947 RMD160 a1c0f0978ed85ba79ed9ab4e8bf50cf268f46ebf SHA1 3ed2f97d509a9a407563c097943413cf4df09ed5 SHA256 eef1f70503755ec8fb311a13731044e6fff17e6fd9534eb6bea68a12964d94bf
-EBUILD maxima-5.17.1-r1.ebuild 4822 RMD160 62294b85268a2bd2bc1f3c9b38eb0f1f3e24e34e SHA1 f1733fb57a0c12bd34d119795670b9e8f19e1510 SHA256 be88dd86909933afc806ed478691bef39c2f6acde02eb0c3d7861a5ff42c221f
-EBUILD maxima-5.18.1.ebuild 4298 RMD160 d46c98dce6aecdaaf93235524abb0da44925ada2 SHA1 3ec6a8b2611aad093e1106cdf95d03b9d5874145 SHA256 16db86f00adbad2e1bc5b1f368012be274c8a1343ee6f26e885d7ffd7a8fc628
-MISC ChangeLog 15217 RMD160 c11472e2b274a40b850c478c7c33f35da6992fea SHA1 9eeb2cb3e63b96a41e7c73b42f52c9178acee407 SHA256 32a53fea45cd7d04a5d87791877c7c22ec020812e7a04c3c965ac9bd912cad7b
+EBUILD maxima-5.17.1-r1.ebuild 4752 RMD160 3f2913068efb604235d438bd7dc9d8c529ee6311 SHA1 8322567aaae58665b53f2f4f13e8217813311615 SHA256 bc11372470219b712d46d7b111e05983308f42de617ee758d889de93159292e0
+EBUILD maxima-5.18.1.ebuild 4225 RMD160 63180a500b10132d311b64707711ef1c1ea3cc3e SHA1 ec45f32372b3bd8570efecf30eb61b09ed7417a9 SHA256 e9675439a1f6b444e89ec3bc358ff3f81a2ab517a10361f72820f9c2497c0b1b
+MISC ChangeLog 15388 RMD160 ccc9b5f7b1fe8b047bc94850e1ef5868ffdf62e6 SHA1 8342e7764c653cbb7cea7a08773c6b23c50a1693 SHA256 e15e298dc9cc4d13528d9b9754586c35d51b3edcda278ec2bb92e0041c27910d
 MISC metadata.xml 1102 RMD160 db38575a64fb0b629771fa31b16e8336ea372b07 SHA1 099738161c9f0cfb1892f8ff71ec793fde02fd7a SHA256 2e07710f3f4295b77b6ac15d1e8edb48753c9f1aa3fd43662ec34db10e956b41
